--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(.saddlenode)
 export(.transcritical)
 export(Hopf)
 export(SIS)
+export(bifplot)
 export(determine_ntimesteps)
 export(doublewell)
 export(genereg)
@@ -19,6 +20,7 @@ export(preallocate_noise)
 export(saddlenode)
 export(sde)
 export(solve_in_range)
+export(time_ev)
 export(transcritical)
 import(deSolve)
 import(parallel)
