--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,6 @@ export(sde)
 export(solve_in_range)
 export(time_ev)
 export(transcritical)
+import(Matrix)
 import(deSolve)
-import(graphics)
 import(parallel)
-import(stats)
