--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: sdn
 Version: 0.1-1
-Date: 2024-02-15
+Date: 2024-10-15
 Title: Simulate dynamics on networks
 Author: Neil G. MacLaren [aut, cre]
 Maintainer: Neil G. MacLaren <neil.g.maclaren@gmail.com>
-Imports: graphics, stats, parallel, deSolve
+Imports: parallel, Matrix, deSolve
 Suggests: igraph, knitr, rmarkdown
-Description: Simulate dynamics on networks using ordinary or stochastic differential equations. Relies on deSolve for ODEs. For SDEs, uses a simple Euler-Maruyama implementation to produce an object like the output from deSolve::ode().
+Description: Simulsate dynamics on networks using ordinary or stochastic differential equations. Relies on deSolve for ODEs. For SDEs, uses a simple Euler-Maruyama implementation to produce an object like the output from deSolve::ode().
 VignetteBuilder: knitr
 BuildVignettes: no
 License: GPL-3
 Encoding: UTF-8
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
