--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,26 +2,42 @@
 
 export(.Hopf)
 export(.SIS)
+export(.biochemical)
 export(.doublewell)
+export(.epidemic)
 export(.genereg)
+export(.mutual)
 export(.mutualistic)
+export(.neuronal)
 export(.pitchfork)
+export(.population)
+export(.regulatory)
 export(.saddlenode)
+export(.synchronization)
 export(.transcritical)
+export(.voter)
 export(Hopf)
 export(SIS)
 export(bifplot)
+export(biochemical)
 export(determine_ntimesteps)
 export(doublewell)
+export(epidemic)
 export(genereg)
+export(mutual)
 export(mutualistic)
+export(neuronal)
 export(pitchfork)
+export(population)
 export(preallocate_noise)
+export(regulatory)
 export(saddlenode)
 export(sde)
 export(solve_in_range)
+export(synchronization)
 export(time_ev)
 export(transcritical)
+export(voter)
 import(Matrix)
 import(deSolve)
 import(parallel)
