Update documentation for games.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,8 +20,11 @@ export(Hopf)
 export(SIS)
 export(bifplot)
 export(biochemical)
+export(calc_reprate)
+export(death_birth)
 export(determine_ntimesteps)
 export(doublewell)
+export(ede)
 export(epidemic)
 export(genereg)
 export(mutual)
